templates/citoid_template.yaml
---
# Source: citoid/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: citoid-release-name
  labels:
    app: citoid
    chart: citoid-0.3.2
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: citoid
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 1970
        protocol: TCP
      - port: 9102
        protocol: TCP
---
# Source: citoid/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citoid-release-name
  labels:
    app: citoid
    chart: citoid-0.3.2
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: citoid
    release: release-name
    routed_via: release-name
  ports:
  - name: http
    protocol: TCP
    port: 1970
---
# Source: citoid/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citoid-release-name
  labels:
    app: citoid
    chart: citoid-0.3.2
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: citoid
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: citoid
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: 8d0125016a689e9a45a992310b888b1df32ea8dc3b7c18cbadccebbaf859b12d
        prometheus.io/scrape: "false"
                
    spec:
      containers:
        # The main application container
        - name: citoid-release-name
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-citoid:latest"
          command: ["node"]
          args: ["/srv/service/server.js", "-c", "/etc/citoid/config.yaml"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 1970
          livenessProbe:
            tcpSocket:
              port: 1970
          readinessProbe:
            httpGet:
              path: /_info
              port: 1970
          volumeMounts:
            - name: config-volume
              mountPath: /etc/citoid
          resources:
            requests:
              cpu: 1m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 400Mi        
      volumes:
        
        - name: config-volume
          configMap:
            name: config-release-name
---
# Source: citoid/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'citoid-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'citoid-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(CITOID_RELEASE_NAME_SERVICE_HOST)', 'http://citoid-release-name:1970']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
